# gcal-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: _config.yml  google-oauth-setup.html  google-oauth-setup.md  index.html
docs/_includes/: custom-head.html
docs/assets/css/: dark-mode.css  style.css
docs/assets/js/: main.js
scripts/: get-refresh-token.py
src/calendar_mcp/: __init__.py  __main__.py  server.py
src/calendar_mcp/tools/: events.py  freebusy.py
src/gcal_mcp/: __init__.py  __main__.py
src/gcal_mcp/tools/: __init__.py  calendars.py  events.py
tests/: conftest.py  test_calendars.py  test_events.py  test_freebusy.py  test_slim_response.py
